# Tauri-Practice

./: .gitignore
.cursor/rules/: tauri-svelte-rust-ts.mdc
Snake/: package-lock.json  package.json  svelte.config.js
Snake/src-tauri/: Cargo.toml  tauri.conf.json
Snake/src-tauri/src/: commands.rs  lib.rs
Snake/src-tauri/src/game/: engine.rs  food.rs  mod.rs  snake.rs  tests.rs
Snake/src/routes/: +page.svelte
Statistic/: package-lock.json  package.json
Statistic/.cursor/rules/: tauri-svelte-rust-ts.mdc
Statistic/src-tauri/: Cargo.toml  tauri.conf.json
Statistic/src-tauri/src/: main.rs
Statistic/src/routes/: +page.svelte
System/: Cargo.toml
System/.cursor/rules/: windows-programming-rust.mdc
System/src/: main.rs
System/src/cpu/: mod.rs  test.rs
System/src/gpu/: mod.rs
System/src/process/: mod.rs  test.rs
System/src/system/: mod.rs  test.rs
bar/: package-lock.json
dock/: package.json
dock/src/: app.html
dock/src-tauri/: Cargo.toml  tauri.conf.json
dock/src-tauri/src/: lib.rs
dock/src/routes/: +page.svelte
taskbar/: package-lock.json  package.json
taskbar/src-tauri/: tauri.conf.json
widget/: README_中文註釋說明.md  package-lock.json  package.json  svelte.config.js
widget/project.inlang/: project_id
widget/src/: app.html
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs
widget/src/lib/components/ui/: CloseButton.svelte  InfoBlock.svelte  WidgetContainer.svelte
widget/src/routes/: +layout.svelte  +page.svelte
