[package]
name = "System"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
machine-info = "1.0.9"
sysinfo = "0.35.1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
]}
wmi = "0.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
nvml-wrapper = "0.10.0"
